syntax = "proto3";

import "auth.proto";
import "shared.proto";

package foobar.user_setting;

message UserInfo {

}

service UserSetting {
    rpc get_password(auth.Auth) returns (auth.Auth) {};
    rpc get_info(auth.Auth) returns (UserInfo) {};
    rpc update_info(UserInfo) returns (shared.Empty) {};
}